Revert "FIx free final"
This reverts commit bec41bee0536442719a3d5161dec46d1a916bba7.